fix breadcrub bg image url

--- a/style.css
+++ b/style.css
@@ -34,5 +34,5 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
 
 #opal-breadscrumb {
-	background: url(../img/bg-breadcrumb.png) no-repeat center center !important;
+	background: url(img/bg-breadcrumb.png) no-repeat center center !important;
 }
