--- a/style.css
+++ b/style.css
@@ -34,5 +34,15 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
 
 #opal-breadscrumb {
+	position: relative;
 	background: url(img/bg-breadcrumb.png) no-repeat center center !important;
+}
+#opal-breadscrumb:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.4);
+    left: 0;
+    top: 0;
 }
